[metadata]
name = sre-bot
version = 0.0.12
description = Data collector / executor - Site Reliability Framework
url = https://github.com/marcwimmer/wodoo
email = marc@itewimmer.de
author = Marc-Christian Wimmer
license = MIT
description-file = README.md

[options]
python_requires = >=3.6.0

[options.entry_points]
console_scripts =
    sre-bot = srebot:cli
