[metadata]
name = sre-bot
version = 0.1.0
description = Data collector / executor - Site Reliability Framework
url = https://github.com/marcwimmer/sre-bot
email = marc@itewimmer.de
author = Marc-Christian Wimmer
license = MIT
description_file = README.md

[options]
python_requires = >=3.6.0

[options.entry_points]
console_scripts =
    base-sre = srebot:cli
